# place

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/data/: activities.yaml
backend/data/bindings/: launch.yaml
backend/data/regions/: priority.yaml
backend/place/: __init__.py  config.py  db.py  dsl.py  models.py  scoring.py
backend/place/api/: app.py  cards.py  confidence.py  deps.py  packs.py  reasons.py  schemas.py  security.py  snapshots.py  vapid_keygen.py
backend/place/api/routes/: __init__.py  admin.py  auth.py  events.py  feed.py  places.py  push.py  saves.py  trips.py  verdicts.py
backend/place/evaluator/: alerts.py  health.py  publish.py  registry.py  run.py
backend/place/evaluator/adapters/: __init__.py  _http.py  airnow.py  base.py  noaa_coops.py  nwac.py  open_meteo.py  snotel.py  sunmoon.py  usgs_nwis.py
backend/place/extract/: __init__.py  fetch_oregonhikers.py  fetch_reddit.py  providers.py  resolve.py  schema.py  worker.py
backend/place/ingest/: bindings.py  cli.py  crosswalk.py  geo.py  gnis.py  overpass.py  proposals.py  regions.py  ridb.py  seed_demo.py  usfs.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_routes.py  test_baseline.py  test_pack_publish.py  test_region_tooling.py
backend/tests/live/: test_adapters_live.py
backend/tests/unit/adapters/: conftest.py  test_airnow.py  test_build_factories.py  test_noaa_coops.py  test_nwac.py  test_open_meteo.py  test_snotel.py  (+2 more)
(+164 files in other folders)
