[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "place"
version = "0.1.0"
description = "Place backend: the experience graph, condition evaluator, and feed API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "astral>=3.2",
    "anthropic>=0.34",
    "itsdangerous>=2.2",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "brotli>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["place*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs the compose postgres on localhost:5433",
    "live: makes real network calls (excluded in CI)",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
